--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,20 @@ text-decoration: none; color: #FFD700;}
   bottom: -40px;
 }
 
-.carousel-indicators li {min-height: 10px; background-repeat: no-repeat;
-background-image: url(../img/tochka.png); background-size: contain;
-}
-.carousel-indicators .active li {
-  min-height: 15px;
+.carousel-indicators li {
+margin: 3px 25px;
+width: 8px;
+height: 8px;
+border-radius: 4px;
+background-color: #f6d3b0;}
+.carousel-indicators .active  {
+
+width: 10px;
+height: 10px;
+box-shadow: 1px 1px 6px rgba(247, 84, 111, 0.69);
+border-radius: 5px;
+background-color: #f19e3a;
+background-image: linear-gradient(88deg, #fe940d 0%, #fe694b 99%, #fe694b 100%);
 }
 
 
@@ -67,7 +76,7 @@ background-image: url(../img/tochka.png); background-size: contain;
   align-items: center;
   background: #fff;
   border-radius: 30px;
-  left: 0px;
+  left: 140px;
   top: 17px;
 }
 
@@ -117,9 +126,11 @@ background-image: url(../img/tochka.png); background-size: contain;
   opacity: 0;
 }
 .header-menu {position: absolute; background: url(../img/bg-green.png) no-repeat; 
-  background-size: cover; max-width: 550px; width: 100%;}
+  background-size: cover; max-width: 720px; width: 100%; padding-left: 150px;}
 .navbar-light .navbar-nav .nav-link {color: #fff;}
-.header {}
+.nav-green {
+  min-height: 438px;
+}
 .block_green {background-image: url(../img/header1.png); padding-bottom: 50px;
 background-size: cover; background-repeat: no-repeat; 
 -webkit-transition: all 0.5s ease-in-out;
@@ -136,6 +147,11 @@ h1 {margin-top: 17px;}
 
 .but1 {position: absolute;top:240px; left: 20px; }
 .img-product{max-width: 380px; width: 100%;}
+.product-after:after {
+  content: url(../img/no-recept.png);
+    position: absolute;
+   ;
+}
 .brand-white {font-size: 40px;}
 .ul-head {font-size: 18px; }
 .ul-head li {color: #00FFFF;
@@ -147,8 +163,8 @@ h1 {margin-top: 17px;}
 
 .note  {background-image: url(../img/1.png); background-repeat: no-repeat;padding-left: 40px;
    background-size: contain;}
-.but2 {position: absolute;    bottom: 121px;
-    left: 260px;}
+.but2 {position: absolute;    bottom: 107px;
+    left: 247px;}
 .myasoed {position: absolute;top: 40px;
     left: 155px;
     font-size: 10px;
@@ -157,7 +173,27 @@ h1 {margin-top: 17px;}
 
 /* == =======  3 где пацан на стрессе =========*/
 .bg-2 {background-image: url(../img/bg2.png); background-size: cover; background-repeat: no-repeat;} 
-.boroda-sm {max-height: 375px;}
+
+.komu-txt {
+margin-top: 12px;
+    text-align: center;
+color: #3c3c3c;
+font-family: Montserrat;
+font-size: 15px;
+font-weight: 500;text-transform:uppercase;
+line-height: 26px;}
+.komu1, .komu2, .komu3, .komu4, .komu5, .komu6 {
+max-width: 329px; width: 100%; margin-bottom: 120px;
+height: 69px; position: absolute;
+border-radius: 35px;
+background-color: #ffffff;}
+.komu1 {left: 130px;top: 40px;z-index: 5;}
+.komu2{left: 55px;top: 200px;z-index: 5;}
+.komu3 {left: 155px;top: 390px;z-index: 5;}
+.komu4{right:120px;top: 40px;}
+.komu5{right:55px;top: 200px;}
+.komu6 {right:110px;top: 390px;}
+.boroda-sm {max-width: 762px; width: 100%;}
 
 /* == =======  4 Создан для тех, 
 кто хочет получать супер-результаты в жизни =========*/
@@ -306,7 +342,7 @@ line-height: 30px;}
 .circle_13{top: 106px; left: 445px;}
 .circle_14{ left: 380px;}
 .circle_15{top: 358px; left: 270px;}
-.circle_16{ left: 556px;}
+.circle_16{ left: 533px;}
 .circle_17{top: 10px; left: 500px;}
 .circle_18{right: 428px;}
 .circle_19{top: 50px;right: 640px;}
@@ -348,6 +384,7 @@ line-height: 30px;}
   .header-menu {position: relative;margin-bottom: 30px;}
   .but2 {bottom: 167px;left: 338px;}
   .myasoed {top: 63px;left: 214px;font-size: 15px;line-height: 22px;}
+  .komu
   .img-vid {display: block;}
   .slider1 .carousel-control-prev {
         left: 488px;
@@ -388,7 +425,7 @@ line-height: 30px;}
 
   .myasoed {
     top: 44px;
-    left: 171px;
+    left: 217px;
     font-size: 13px;
     line-height: 19px;
 }
@@ -422,6 +459,7 @@ line-height: 30px;}
 .button_transp {
       display: block;
     text-align: center;
+    margin: 0 auto;
     margin-bottom: 15px;
 }
 
@@ -488,6 +526,9 @@ line-height: 30px;}
     left: 258px;
     top: 249px;
 }
+.slider2 .carousel-control-prev {
+    left: 5px;
+}
 .akulov {
     left: 226px;
     top: 163px;
@@ -497,3 +538,14 @@ line-height: 30px;}
 
 
   }
+ @media only screen and (max-width: 320px){
+  .but2 {
+    left: 137px;
+    bottom: 21px;
+}
+.but4 {left: 73px;}
+.but5 {right: 112px;}
+
+
+ }
+
